--- a/IT/02 arm/1.2 Makefile.md
+++ b/IT/02 arm/1.2 Makefile.md
@@ -42,3 +42,15 @@ clean :
 ### make –f 文件名
 - make命令默认在当前目录下寻找名字为makefile或者Makefile的工程文件
 
+# 调试
+```
+# 使用info/warning/error增加调试信息，可以在任何位置使用
+$(info “here is debug")     # info 是不带行号的
+$(warning “here is debug")  # warning 是带行号的
+$(error “here is debug")    # error 停止当前makefile的编译
+
+# 使用echo输出变量
+ARCH ?= arm
+mytest:
+	@echo 'ARCH='$(ARCH)
+```
