--- a/IT/03 Android Framework/2.3 AIDL.md
+++ b/IT/03 Android Framework/2.3 AIDL.md
@@ -5,4 +5,179 @@
 	- 地头蛇实现Proxy和Stub类
 
 ![](../photo/Pasted%20image%2020230711103040.png)
+
 ![](../photo/Pasted%20image%2020230711103304.png)
+
+# aidl 和 代码生成
+```
+// mp3PlayerInterface.aidl
+interface mp3PlayerInterface mp3PlayerInterface{
+	void play();
+	void stop();
+}
+
+// mp3PlayerInterface.java
+/*
+ * This file is auto-generated. DO NOT MODIFY.
+ * Original file: mp3PlayerInterface.aidl
+ */
+public interface mp3PlayerInterface extends android.os.IInterface {
+    static final int TRANSACTION_play = (IBinder.FIRST_CALL_TRANSACTION + 0);
+    static final int TRANSACTION_stop = (IBinder.FIRST_CALL_TRANSACTION + 1);
+
+    public static abstract class Stub extends android.os.Binder implements com.misoo.pkgx.mp3PlayerInterface {
+        public boolean onTransact(int code, android.os.Parcel data, android.os.Parcel reply, int flags) throws android.os.RemoteException {
+            switch (code) {
+                case INTERFACE_TRANSACTION:
+                    {
+                        reply.writeString(DESCRIPTOR);
+                        return true;
+                    }
+                case TRANSACTION_play:
+                    {
+                        data.enforceInterface(DESCRIPTOR);
+                        this.play();
+                        reply.writeNoException();
+                        return true;
+                    }
+                case TRANSACTION_stop:
+                    {
+                        data.enforceInterface(DESCRIPTOR);
+                        this.stop();
+                        reply.writeNoException();
+                        return true;
+                    }
+            }
+            return super.onTransact(code, data, reply, flags);
+        }
+
+        public void play() throws android.os.RemoteException;
+        public void stop() throws android.os.RemoteException;
+    }
+
+    private static class Proxy implements com.misoo.pkgx.mp3PlayerInterface {
+        private android.os.IBinder mRemote;
+
+        public void play() throws android.os.RemoteException {
+            android.os.Parcel _data = android.os.Parcel.obtain();
+            android.os.Parcel _reply = android.os.Parcel.obtain();
+            try {
+                _data.writeInterfaceToken(DESCRIPTOR);
+                mRemote.transact(Stub.TRANSACTION_play, _data, _reply, 0);
+                _reply.readException();
+            } finally {
+                _reply.recycle();
+                _data.recycle();
+            }
+        }
+
+        public void stop() throws android.os.RemoteException {
+            android.os.Parcel _data = android.os.Parcel.obtain();
+            android.os.Parcel _reply = android.os.Parcel.obtain();
+            try {
+                _data.writeInterfaceToken(DESCRIPTOR);
+                mRemote.transact(Stub.TRANSACTION_stop, _data, _reply, 0);
+                _reply.readException();
+            } finally {
+                _reply.recycle();
+                _data.recycle();
+            }
+        }
+    }
+}
+```
+
+# 具体实现
+```
+// mp3Binder.java
+package com.misoo.pkgx;
+import android.content.Context;
+import android.media.MediaPlayer;
+import android.util.Log;
+public class mp3Binder extends mp3PlayerInterface.Stub {
+    private MediaPlayer mPlayer = null;
+    private Context ctx;
+
+    public mp3Binder(Context cx) {
+        ctx = cx;
+    }
+
+    public void play() {
+        if (mPlayer != null) return;
+        mPlayer = MediaPlayer.create(ctx, R.raw.test_cbr);
+        try {
+            mPlayer.start();
+        } catch (Exception e) {
+            Log.e("StartPlay", "error: " + e.getMessage(), e);
+        }
+    }
+
+    public void stop() {
+        if (mPlayer != null) {
+            mPlayer.stop();
+            mPlayer.release();
+            mPlayer = null;
+        }
+    }
+}
+
+// mp3Service.java
+package com.misoo.pkgx;
+import android.app.Service;
+import android.content.Intent;
+import android.os.IBinder;
+public class mp3Service extends Service {
+    IBinder ib = null;
+
+    @Override public void onCreate() {
+        super.onCreate();
+        ib = new mp3Binder(this.getApplicationContext());
+    }
+
+    @Override public void onDestroy() {}
+
+    @Override public IBinder onBind(Intent intent) {
+        return ib;
+    }
+}
+
+// ac01.java
+// ………
+public class ac01 extends Activity implements OnClickListener {
+    //……….
+    private PlayerProxy pProxy = null;
+    public void onCreate(Bundle icicle) {
+        // ………
+        startService(new Intent("com.misoo.pkgx.REMOTE_SERVICE"));
+        bindService(new Intent("com.misoo.pkgx.REMOTE_SERVICE"),
+            mConnection, Context.BIND_AUTO_CREATE);
+    }
+
+    private ServiceConnection mConnection = new ServiceConnection() {
+        public void onServiceConnected(ComponentName className,
+            IBinder ibinder) {
+            pProxy = mp3PlayerInterface.Stub.asInterface(ibinder);
+        }
+        public void onServiceDisconnected(ComponentName className) {}
+    };
+
+    public void onClick(View v) {
+        switch (v.getId()) {
+            case 101:
+                pProxy.play();
+                tv.setText(pProxy.getStatus());
+                break;
+            case 102:
+                pProxy.stop();
+                tv.setText(pProxy.getStatus());
+                break;
+            case 103:
+                unbindService(mConnection);
+                stopService(new Intent(
+                    "com.misoo.pkgx.REMOTE_SERVICE"));
+                finish();
+                break;
+        }
+    }
+}
+```
